--- a/mlefrontend/package.json
+++ b/mlefrontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mlefrontend",
+  "homepage": "http://194.163.40.174/",
   "version": "0.1.0",
   "proxy": "http://127.0.0.1:3001",
   "private": true,
