--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ NODE_ENV = development
 JWT_SECRET = mle@123
 RAZORPAY_KEY = rzp_test_nYu75Htxw4ZmiZ
 RAZORPAY_SECRET = Pu6G7xUOg1Pca9dN7arP3doU
+PAYTM_KEY = _VMilwzhKOl_WFbB
+PAYTM_MERCHANT_ID = OhKWfG63235488646929
