--- a/mlefrontend/package.json
+++ b/mlefrontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
     "axios": "^0.24.0",
+    "cashfree-dropjs": "^1.1.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
