--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.2.0",
     "nodemon": "^2.0.13",
+    "paytmchecksum": "^1.5.0",
     "razorpay": "^2.8.0",
     "uuid": "^8.3.2"
   }
