user Update Route

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST = mongodb+srv://gafidev:gafi1@gafidb.cv9hi.mongodb.net/test
-NODE_ENV = production
+NODE_ENV = development
 JWT_SECRET = mle@123
 PAYTM_MERCHANT_ID = OhKWfG63235488646929
 PAYTM_MERCHANT_KEY = _VMilwzhKOl_WFbB
