--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST = mongodb+srv://gafidev:gafi1@gafidb.cv9hi.mongodb.net/test
-NODE_ENV = production
+NODE_ENV = development
 JWT_SECRET = mle@123
 PAYTM_MERCHANT_ID = OhKWfG63235488646929
 PAYTM_MERCHANT_KEY = _VMilwzhKOl_WFbB
@@ -9,5 +9,5 @@ PAYMENT_URL = https://test.payu.in/_payment
 #PAYMENT_URL = https://secure.payu.in/_payment
 PAYTM_WEBSITE = WEBSTAGING
 PAYTM_CALLBACK = http://localhost:3000
-CASHFREE_APP_ID = 159514f1ae423d9e8c510b0110415951
-CASHFREE_SECRET = 97919fbfc3c9194558372a6766766e915abe04db
+CASHFREE_APP_ID = 208118e1ccc5ab57289542b19d811802
+CASHFREE_SECRET = 95697f4003e1f962f28d8f04f91616ee62dff54e
