--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cashfreepayments/cashfree-sdk": "^0.1.7",
+    "api": "^4.5.1",
     "async-handler": "^0.0.3",
+    "axios": "^0.27.2",
     "base-64": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
