--- a/mlefrontend/package.json
+++ b/mlefrontend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mlefrontend",
   "version": "0.1.0",
-  "proxy": "http://127.0.0.1:3001",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -31,6 +30,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:5000/",
   "browserslist": {
     "production": [
       ">0.2%",
