--- a/.env
+++ b/.env
@@ -9,5 +9,12 @@ PAYMENT_URL = https://test.payu.in/_payment
 #PAYMENT_URL = https://secure.payu.in/_payment
 PAYTM_WEBSITE = WEBSTAGING
 PAYTM_CALLBACK = http://localhost:3000
+
 CASHFREE_APP_ID = 208118e1ccc5ab57289542b19d811802
 CASHFREE_SECRET = 95697f4003e1f962f28d8f04f91616ee62dff54e
+URL = https://api.cashfree.com
+
+#test starts
+# CASHFREE_APP_ID = 159514f1ae423d9e8c510b0110415951
+# CASHFREE_SECRET = 97919fbfc3c9194558372a6766766e915abe04db
+# URL = https://sandbox.cashfree.com
