--- a/.env
+++ b/.env
@@ -15,6 +15,6 @@ CASHFREE_SECRET = 95697f4003e1f962f28d8f04f91616ee62dff54e
 URL = https://api.cashfree.com
 
 #test starts
-# CASHFREE_APP_ID = 159514f1ae423d9e8c510b0110415951
-# CASHFREE_SECRET = 97919fbfc3c9194558372a6766766e915abe04db
-# URL = https://sandbox.cashfree.com
+;  CASHFREE_APP_ID = 159514f1ae423d9e8c510b0110415951
+;  CASHFREE_SECRET = 97919fbfc3c9194558372a6766766e915abe04db
+;  URL = https://sandbox.cashfree.com
