--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "base-64": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cashfree-dropjs": "^1.1.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
